--- a/include-modules.ini
+++ b/include-modules.ini
@@ -3,6 +3,7 @@ include-file = $HOME/i3/modules/jdate.ini
 include-file = $HOME/i3/modules/openweathermap-fullfeatured.ini
 include-file = $HOME/i3/modules/color-picker.ini
 include-file = $HOME/i3/modules/bluetooth.ini
+include-file = $HOME/i3/modules/bluetooth.desktop.ini
 include-file = $HOME/i3/modules/bluetooth2.ini
 include-file = $HOME/i3/modules/battery.ini
 include-file = $HOME/i3/modules/package-updates-trigger.ini
