--- a/modules/bluetooth.desktop.ini
+++ b/modules/bluetooth.desktop.ini
@@ -1,8 +1,8 @@
-[module/bluetooth2]
+[module/bluetooth.desktop]
 type = custom/script
 exec = rofi-bluetooth --status
 interval = 2
-click-left = ~/scripts/rofi-bluetooth
+click-left = ~/scripts/rofi-bluetooth.desktop
 click-right = blueman-manager
 # format-foreground = #fc8353
 format-foreground = #A8D385
