--- a/configs/config
+++ b/configs/config
@@ -356,8 +356,6 @@ for_window [class="plasmashell" window_type="notification"] floating enable, bor
 # no_focus [class="plasmashell" window_type="notification"]
 for_window [class="Steam"] floating enable
 
-for_window [class="plasmawindowed" title="TodoList"] resize set 1200 2000
-
 ## CUSTOM KEYBINDS
 # start rofi tabswitcher
 bindsym Mod1+ISO_Left_Tab exec --no-startup-id $HOME/scripts/tabswitcher.sh
@@ -394,7 +392,7 @@ assign [class="^plasmawindowed$"] "4: "
 for_window [class="Spotify"] move --no-auto-back-and-forth to workspace $ws9
 
 # Unlock KWallet
-exec --no-startup-id /usr/lib/pam_kwallet_init
+# exec --no-startup-id /usr/lib/pam_kwallet_init
 
 ## ON STARTUP
 # launch polybar on startup
@@ -407,3 +405,4 @@ exec_always --no-startup-id /home/sudacode/scripts/wallpaper.sh
 exec --no-startup-id ~/scripts/calendar.sh
 exec --no-startup-id ~/scripts/todo.sh
 
+for_window [class="plasmawindowed" title="TodoList"] resize set 1200 2000
