--- a/configs/config.desktop
+++ b/configs/config.desktop
@@ -115,13 +115,13 @@ bindsym $mod+a focus parent
 # set $ws2 "2"
 # set $ws3 "3"
 # set $ws4 "4"
-set $ws1 "1: "
-set $ws2 "2: "
-set $ws3 "3: ﬏"
+set $ws1 "1:"
+set $ws2 "2:"
+set $ws3 "3:"
 set $ws4 "4: "
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
+set $ws5 "5: "
+set $ws6 "6: "
+set $ws7 "7: ﬏"
 set $ws8 "8"
 set $ws9 "9: "
 set $ws10 "10"
@@ -384,9 +384,9 @@ bindsym Mod1+m exec --no-startup-id $HOME/scripts/flameshot_full.sh
 bindsym Mod1+p exec --no-startup-id $HOME/scripts/pavucontrol.sh
 
 ## ASSIGN TO WORKSPACES
-assign [class="^firefox$"] "2: "
-assign [class="^Code$"] "3: ﬏"
-assign [class="^plasmawindowed$"] "4: "
+assign [class="^firefox$"] $ws6 
+assign [class="^Code$"] $ws7 
+assign [class="^plasmawindowed$"] $ws4 
 # Assign and move spotify to workspace 9
 for_window [class="Spotify"] move --no-auto-back-and-forth to workspace $ws9
 
@@ -406,3 +406,16 @@ exec --no-startup-id ~/scripts/todo.sh
 
 # for_window [class='plasmawindowed' title='TodoList'] resize set 500 500
 for_window [class="plasmawindowed" title="TodoList"] resize set 600 
+
+# workspaces for dual monitors
+workspace $ws10 output HDMI-0
+workspace $ws1 output HDMI-0
+workspace $ws2 output HDMI-0
+workspace $ws1 output HDMI-0
+workspace $ws4 output HDMI-0
+workspace $ws5 output DP-2
+workspace $ws6 output DP-2
+workspace $ws7 output DP-2
+workspace $ws8 output DP-2
+workspace $ws9 output DP-2
+
