--- a/configs/config.desktop
+++ b/configs/config.desktop
@@ -406,7 +406,8 @@ exec --no-startup-id ~/scripts/todo.sh
 
 # for_window [class='plasmawindowed' title='TodoList'] resize set 500 500
 for_window [class="plasmawindowed" title="TodoList"] resize set 600 
-for_window [title="Android Emulator - Pixel_3a_API_30_x86:5554"] floating enable, border none
+# Android emulator - eecs285 project4
+for_window [title="Android Emulator - Pixel_3a_API_30:5554"] floating enable, border none
 
 # workspaces for dual monitors
 workspace $ws10 output HDMI-0
